[package]
name = "lattica-python-core"
version = "1.0.0"
edition = "2024"

[lib]
name = "lattica_python_core"
crate-type = ["cdylib"]


[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
libp2p = { version = "0.54.0", features = ["full"] }
pyo3 = {version = "0.25.1", features = ["full"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tracing = "0.1.41"
async-trait = "0.1.88"
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime", "async-std"] }
cid = "0.11.1"

[dependencies.lattica]
path = "../../lattica"